<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 Zhihu Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/cross_black" />

            <com.zhihu.matisse.CustomTextView
                android:id="@+id/selected_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:padding="14dp"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:text="@string/gallery_title"
                android:textColor="@color/login_black"
                android:textSize="16sp"
                app:font_name="semibold" />

            <com.zhihu.matisse.CustomTextView
                android:id="@+id/next"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:text="@string/select"
                android:textColor="@color/turquoise"
                android:textSize="16sp"
                app:font_name="semibold" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/bottomToolbar.bg"
        android:elevation="4dp"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/button_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:selectableItemBackground"
            android:padding="16dp"
            android:text="@string/button_preview"
            android:textColor="?attr/bottomToolbar.preview.textColor"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/button_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:foreground="?android:selectableItemBackground"
            android:padding="16dp"
            android:textColor="?attr/bottomToolbar.apply.textColor"
            android:textSize="16sp"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_above="@id/bottom_toolbar"
        android:layout_below="@id/toolbar"
        android:padding="5dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/cameraLayout"
            android:foreground="?android:attr/selectableItemBackground"
            >
            <com.google.android.cameraview.CameraView
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:keepScreenOn="true"
                android:adjustViewBounds="true"
                app:autoFocus="true"
                app:aspectRatio="16:9"
                app:facing="back"
                app:flash="auto"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />
            <com.zhihu.matisse.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/overlay_camera"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:visibility="visible"/>

        <FrameLayout
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:visibility="gone">

            <TextView
                android:id="@+id/empty_view_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="8dp"
                android:drawableTop="?attr/album.emptyView"
                android:gravity="center"
                android:text="@string/empty_text"
                android:textColor="?attr/album.emptyView.textColor"
                android:textSize="16sp"
                />

        </FrameLayout>
    </LinearLayout>


</RelativeLayout>